# Exp1-NELA-baseline-full-random-separation

./: .gitignore  experiment.json  gen_problem.py  history_slice_1.txt  output_sample.json  plan.md  pyproject.toml  run_experiment.py  todolist.md  train_metabbo_with_feat_extractor.py  train_trival_metabbo.py  trainer.py
eval/: __init__.py  _baseline_bbob.py  _baseline_bbob_noisy.py  _baseline_protein.py  _cache.py  _compat.py  _io.py  _registry.py  cost_baseline.py  evaluator.py  fitness.py  slice_dataset.py  utils.py
feat_extractor/: __init__.py  feature_extractor.py  original_transformer_model.py
metabbo/: __init__.py  agent_common.py  basic_environment.py  boundary_control.py  crossover.py  deddqn_agent.py  deddqn_optimizer.py  feature_utils.py  gleet_agent.py  gleet_optimizer.py  lde_agent.py  lde_optimizer.py  mutate.py  operators.py  optimizer_common.py  registry.py  rl_das_agent.py  rl_das_optimizer.py  rl_pso_agent.py  rl_pso_optimizer.py  rlepso_agent.py  rlepso_optimizer.py
metabbo/deddqn_related/: __init__.py  operators.py  utils.py
metabbo/rldas_related/: __init__.py  ensemble.py
pics/: README.md  build_report_data.py  common.py  plot_report.py
record/1/exp_0/: agent.pkl  history_slice_0.txt  history_slice_1.txt  history_slice_2.txt  history_slice_3.txt  history_slice_4.txt  history_slice_5.txt  history_slice_6.txt  history_slice_7.txt  history_slice_8.txt  history_slice_9.txt  log.csv  output.json
record/1/exp_1/: agent.pkl  history_slice_0.txt  history_slice_1.txt  (+50 more)
records/trival_saved/: RLEPSO_Agent_175_slice-50x20-two.pkl  log.md
(+169 files in other folders)
